BES: commit down from AneuFuse and VPH2

--- a/VME/CMakeLists.txt
+++ b/VME/CMakeLists.txt
@@ -62,6 +62,8 @@ SET(PROJECT_SRCS
   medVMEOutputComputeWrapping.cpp
   medVMEOutputComputeWrapping.h 
 
+	mafPipeSlice.cpp
+	mafPipeSlice.h
 )
 
 IF (MAF_USE_ITK)
