BES: commit down from AneuFuse and VPH2 - STAGE 3

--- a/Views/CMakeLists.txt
+++ b/Views/CMakeLists.txt
@@ -38,6 +38,8 @@ SET(PROJECT_SRCS
   #medViewEmgGraph.h
   medViewSlicer.cpp
   medViewSlicer.h
+  mafViewSliceOnCurve.cpp
+  mafViewSliceOnCurve.h
 )
 
 # List libraries that are needed by this project.
