BES: commit down from AneuFuse and VPH2 - STAGE 3

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -23,6 +23,8 @@ SET(PROJECT_SRCS
   medCurvilinearAbscissaOnSkeletonHelper.h
   medGizmoInteractionDebugger.cpp
   medGizmoInteractionDebugger.h
+	mafDbg.h
+	mafDataChecksum.h
 )
 
 # List libraries that are needed by this project.
