BES: commit down from LHPBuilder and VPH2 - STAGE 2

--- a/Interaction/CMakeLists.txt
+++ b/Interaction/CMakeLists.txt
@@ -18,6 +18,8 @@ SET(PROJECT_SRCS
   mmiVTKPicker.h
   medGizmoPolylineGraph.cpp
   medGizmoPolylineGraph.h
+  mafGizmoROI_BES.cpp
+  mafGizmoROI_BES.h  
 )
 
 
