--- a/VME/CMakeLists.txt
+++ b/VME/CMakeLists.txt
@@ -62,16 +62,33 @@ SET(PROJECT_SRCS
   medVMEOutputComputeWrapping.cpp
   medVMEOutputComputeWrapping.h 
 
-	mafPipeSlice.cpp
-	mafPipeSlice.h
-	mafPipeMeshSlice_BES.cpp
-	mafPipeMeshSlice_BES.h
-	mafPipePolylineSlice_BES.cpp
-	mafPipePolylineSlice_BES.h
-	mafPipeSurfaceSlice_BES.cpp
-	mafPipeSurfaceSlice_BES.h
-	mafPipeVolumeSlice_BES.cpp
-	mafPipeVolumeSlice_BES.h
+  mafPipeSlice.cpp
+  mafPipeSlice.h
+  mafPipeMeshSlice_BES.cpp
+  mafPipeMeshSlice_BES.h
+  mafPipePolylineSlice_BES.cpp
+  mafPipePolylineSlice_BES.h
+  mafPipeSurfaceSlice_BES.cpp
+  mafPipeSurfaceSlice_BES.h
+  mafPipeVolumeSlice_BES.cpp
+  mafPipeVolumeSlice_BES.h
+  
+  ############# VolumeLarge Files - TO BE COMMITTED DOWN ########
+  ../BES_Beta/IO/mafBrickedFile.cpp
+  ../BES_Beta/IO/mafBrickedFile.h
+  ../BES_Beta/IO/mafBrickedFileReader.cpp
+  ../BES_Beta/IO/mafBrickedFileReader.h
+  ../BES_Beta/IO/mafBrickedFileWriter.cpp
+  ../BES_Beta/IO/mafBrickedFileWriter.h
+  ../BES_Beta/IO/mafVolumeLargeReader.cpp
+  ../BES_Beta/IO/mafVolumeLargeReader.h
+  ../BES_Beta/IO/mafVolumeLargeWriter.cpp
+  ../BES_Beta/IO/mafVolumeLargeWriter.h
+  mafVMEVolumeLarge.cpp
+  mafVMEVolumeLarge.h
+  mafVMEVolumeLargeUtils.cpp
+  mafVMEVolumeLargeUtils.h  
+  ###############################################################
 )
 
 IF (MAF_USE_ITK)
