Commit for Mucci: Added mafOpApplyTrajectory operation

--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -103,6 +103,8 @@ IF (MAF_USE_VTK)
     mafOpBooleanSurface.h
     mafOpEditNormals.cpp
     mafOpEditNormals.h
+    mafOpApplyTrajectory.cpp
+    mafOpApplyTrajectory.h
   )
 ENDIF (MAF_USE_VTK)
 
