BES: some files in Medical library renamed to fullfil the naming convention

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -23,8 +23,11 @@ SET(PROJECT_SRCS
   medCurvilinearAbscissaOnSkeletonHelper.h
   medGizmoInteractionDebugger.cpp
   medGizmoInteractionDebugger.h
+  
+	#### SHOULD BE COMMITTED DOWN ######
 	mafDbg.h
 	mafDataChecksum.h
+	##################################
 )
 
 # List libraries that are needed by this project.
