--- a/Views/CMakeLists.txt
+++ b/Views/CMakeLists.txt
@@ -38,8 +38,8 @@ SET(PROJECT_SRCS
   #medViewEmgGraph.h
   medViewSlicer.cpp
   medViewSlicer.h
-  mafViewSliceOnCurve.cpp
-  mafViewSliceOnCurve.h
+  medViewSliceOnCurve.cpp
+  medViewSliceOnCurve.h
 )
 
 # List libraries that are needed by this project.
