--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -128,6 +128,9 @@ IF (MED_USE_Offis)
 SET(PROJECT_SRCS ${PROJECT_SRCS}
   medOpImporterDicomOffis.h
   medOpImporterDicomOffis.cpp
+  
+  medOpImporterDicomOffistoMesh.cpp
+  medOpImporterDicomOffistoMesh.h
 )
 ENDIF (MED_USE_Offis)
 
