BES: added compound pipe to support things like: you want to visualize volume, scalars by method A, vectors by method B and tensors by method C, where A, B, C should be customized => without compound pipe, you would need to write |A|*|B|*|C| pipes and have special view to allow its selection :-)

--- a/Gui/CMakeLists.txt
+++ b/Gui/CMakeLists.txt
@@ -22,6 +22,9 @@ SET(PROJECT_SRCS
   medGUIContextualMenu.h
   medGUISettingsAdvanced.cpp
   medGUISettingsAdvanced.h
+  medGUIDynamicVP.cpp
+  medGUIDynamicVP.h
+  
 )
 
 
