Commit for Losi: enhancement for medOpMakeVMETimevariyng

--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -114,7 +114,10 @@ SET(PROJECT_SRCS
   medOpFillHoles.cpp
   medOpFillHoles.h
   medOpMeshDeformation.cpp
-  medOpMeshDeformation.h      
+  medOpMeshDeformation.h
+  
+  medOpMakeVMETimevarying.cpp
+  medOpMakeVMETimevarying.h
   
   #### VolumeLarge - TO BE COMMITTED DOWN    ####
   mafOpImporterBBF.cpp
