Commit for Giunchi: plugged test class vtkMAFProjectRGTest.

--- a/vtkMAF/Testing/CMakeLists.txt
+++ b/vtkMAF/Testing/CMakeLists.txt
@@ -120,3 +120,10 @@ ADD_TEST(vtkMAFProjectSPTest ${EXECUTABLE_OUTPUT_PATH}/vtkMAFProjectSPTest)
 IF (WIN32)
 SET_TARGET_PROPERTIES(vtkMAFProjectSPTest PROPERTIES LINK_FLAGS "/MANIFEST")
 ENDIF (WIN32)
+
+############ vtkMAFProjectRGTest
+ADD_EXECUTABLE(vtkMAFProjectRGTest vtkMAFProjectRGTest.h vtkMAFProjectRGTest.cpp)
+ADD_TEST(vtkMAFProjectRGTest ${EXECUTABLE_OUTPUT_PATH}/vtkMAFProjectRGTest)
+IF (WIN32)
+SET_TARGET_PROPERTIES(vtkMAFProjectRGTest PROPERTIES LINK_FLAGS "/MANIFEST")
+ENDIF (WIN32)
