added RegionGrowing segmentation (Connected threshold)

--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -130,7 +130,8 @@ SET(PROJECT_SRCS
   
   medOpMakeVMETimevarying.cpp
   medOpMakeVMETimevarying.h
-  
+  medOpSegmentationRegionGrowingConnectedThreshold.cpp
+  medOpSegmentationRegionGrowingConnectedThreshold.h
   #### VolumeLarge - TO BE COMMITTED DOWN    ####
   mafOpImporterBBF.cpp
   mafOpImporterBBF.h
