Commit for Losi: plugged test class vtkMAFRulerActor2DTest

--- a/vtkMAF/Testing/CMakeLists.txt
+++ b/vtkMAF/Testing/CMakeLists.txt
@@ -156,3 +156,10 @@ ADD_TEST(vtkMAFProfilingActorTest ${EXECUTABLE_OUTPUT_PATH}/vtkMAFProfilingActor
 IF (WIN32)
  SET_TARGET_PROPERTIES(vtkMAFProfilingActorTest PROPERTIES LINK_FLAGS "/MANIFEST")
 ENDIF (WIN32)
+
+############ vtkMAFRulerActor2DTest
+ADD_EXECUTABLE(vtkMAFRulerActor2DTest vtkMAFRulerActor2DTest.h vtkMAFRulerActor2DTest.cpp)
+ADD_TEST(vtkMAFRulerActor2DTest ${EXECUTABLE_OUTPUT_PATH}/vtkMAFRulerActor2DTest)
+IF (WIN32)
+ SET_TARGET_PROPERTIES(vtkMAFRulerActor2DTest PROPERTIES LINK_FLAGS "/MANIFEST")
+ENDIF (WIN32)
